# PhonoKiller

./: .gitignore  LICENSE  README.md  pyproject.toml
src/phonokiller/: __init__.py  _interactive_cli.py  _resources.py  calculators.py  candidates.py  cli.py  config.py  exceptions.py  instability.py  models.py  relaxation.py  structure.py  workflow.py
tests/: __init__.py  conftest.py  helpers.py  test_calculators.py  test_candidates.py  test_config.py  test_instability.py  test_interactive_cli.py  test_structure.py  test_workflow.py
