[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonokiller"
version = "0.1.0"
description = "A resumable ASE-to-Phonopy structure relaxation and finite-displacement pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "PhonoKiller contributors"}]
dependencies = [
  "ase>=3.27,<4",
  "numpy>=1.23",
  "phonopy>=4.4,<5",
  "pydantic>=2.7,<3",
  "PyYAML>=6",
  "spglib>=2.7,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
]

[project.scripts]
phonokiller = "phonokiller.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
